<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.phonehelper.activitys.RubbishActivity">

    <com.example.administrator.phonehelper.widgets.TopBar
        android:id="@+id/top_header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        custom:leftBackground="@mipmap/btn_homeasup_default"
        custom:leftTextColor="#FFFFFF"
        custom:titleTextColor="#000000"
        custom:titleTextSize="8dp"
        custom:toptitle="@string/SDCleanTitle"></com.example.administrator.phonehelper.widgets.TopBar>


    <RelativeLayout
        android:id="@+id/rl_allRubbish"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/top_header"
        android:background="@color/limegreen">

        <TextView
            android:id="@+id/tv_allRubbish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="42sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_allRubbish"
            android:layout_toStartOf="@+id/tv_allRubbish"
            android:gravity="center"
            android:text="@string/SDCleanDiscover"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_bottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp">
        <CheckBox
            android:id="@+id/cb_selectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
        <Button
            android:id="@+id/btn_cleanRubbish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_shape_btn_blue_10dp"
            android:text="@string/SDCleanDisposableClean"
            android:textColor="@color/white"
            android:layout_toRightOf="@+id/cb_selectAll"
            android:textSize="18sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_rubbishList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_allRubbish"
        android:layout_alignParentStart="true">

    </ListView>

    <ProgressBar
        android:id="@+id/pr_appcachebar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:focusableInTouchMode="false"
        android:indeterminate="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
